[package]
name = "github-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dashmap = "6.0.1"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
mio = "1.0.0"
octocrab = "0.39.0"
reqwest = { version = "0.12.5", default-features = false, features = [
  "rustls-tls",
] }
ropey = "1.6.1"
select = "0.6.0"
serde = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1.38.1", features = [
  "io-util",
  "io-std",
  "macros",
  "rt-multi-thread",
  "process",
  "time",
] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tokio = { version = "1.38.1", features = [
  "io-util",
  "io-std",
  "macros",
  "rt-multi-thread",
  "process",
] }
