[package]
name = "github-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
dashmap = "6.1.0"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
mio = "1.0.3"
octocrab = "0.42.1"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
] }
ropey = "1.6.1"
select = "0.6.0"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = [
  "io-util",
  "io-std",
  "macros",
  "rt-multi-thread",
  "process",
  "time",
] }
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tokio = { version = "1.42.0", features = [
  "io-util",
  "io-std",
  "macros",
  "rt-multi-thread",
  "process",
] }
