[package]
name = "github-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dashmap = "6.1.0"
env_logger = "0.11.6"
futures = "0.3.31"
idna = "1.0.3"
log = "0.4.22"
mio = "1.0.3"
octocrab = "0.43.0"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
] }
ropey = "1.6.1"
select = "0.6.0"
serde = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1.42.0", features = [
  "io-util",
  "io-std",
  "macros",
  "rt-multi-thread",
  "process",
  "time",
] }
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tokio = { version = "1.42.0", features = [
  "io-util",
  "io-std",
  "macros",
  "rt-multi-thread",
  "process",
] }
